--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./style/styles.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>JavaScript Slideshow</h1>
+    <h1>Slideshow</h1>
 
     <div id="slideshow">
       <div class="slide">
